fix: minor desk style inconsistencies
- made onboarding widget button default from primary
  as it takes too much attention
- removed desk navbar dropshadow
- made sidebar text smaller and added padding to plus icon and hover effect
- as we need border in tree view btn-group added those styles in tree.scss
- made hover black on workspace links
- dark mode misc

(cherry picked from commit b1e12a610910d294dfa333f8764b06cc4082085c)

--- a/frappe/public/scss/desk/navbar.scss
+++ b/frappe/public/scss/desk/navbar.scss
@@ -1,7 +1,6 @@
 .navbar {
 	height: $navbar-height;
 	background: var(--navbar-bg);
-	box-shadow: var(--shadow-sm);
 	border-bottom: 1px solid var(--border-color);
 	padding: 0;
 	.navbar-brand {
